# pdf-parsing

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  pdf.rs
src/file_readers/: s3.rs
src/pdf/: document_parser.rs  image_generator.rs
