[package]
name = "pdfium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
image = "0.25.0"
pdfium-render = "0.8.20"
reqwest = "0.12.2"
bytebuffer = "2.2.0"
clap = { version = "4.5.4", features = ["derive"] }
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
dotenv = "0.15.0"
